# Labs_SPO

./: Labs_SPO.sln  README.md
Lab_1/: Labs_SPO.vcxproj
Lab_1/LINUX/: CMakeLists.txt  main.cpp
Lab_1/WIN/: Labs_SPO.vcxproj  main.cpp
Lab_2/: Lab_2.vcxproj  main.cpp
Lab_2/LINUX/: CMakeLists.txt  main.cpp
Lab_2/WIN/: main.cpp
Lab_2_1/: Lab_2_1.vcxproj  main.cpp
Lab_3/: main.cpp  readme_lab3.md
Lab_3/LINUX/: CMakeLists.txt
Lab_3/LINUX/client/: client.cpp
Lab_3/LINUX/server/: server.cpp
Lab_3/LINUX/src/: main.cpp
Lab_3/WIN/: Lab_3.vcxproj
Lab_3/WIN/Lab_3/: Lab_3.sln  Lab_3.vcxproj  client.cpp
Lab_3/WIN/server/: server.cpp  server.vcxproj
Lab_4/: main.cpp
Lab_4/LINUX/: CMakeLists.txt  getch.h  main.cpp
Lab_4/WIN/: Lab_4.vcxproj  main.cpp
Lab_5/: main.cpp
Lab_5/LINUX/: CMakeLists.txt  a_in_out.cpp  file_handler.h  main.cpp
Lab_5/WIN/: Lab_5.vcxproj  main.cpp
Lab_5/WIN/Lab_5/: FileThreads.h  Lab_5.sln  Lab_5.vcxproj  Lab_5.vcxproj.filters  New Text Document (2).txt  New Text Document.txt  Source.cpp  output.txt
Lab_5/WIN/aio/: aio.cpp  aio.vcxproj  aio.vcxproj.filters
Lab_6/: Lab_6.vcxproj
Lab_6/WIN/: main.cpp
Lab_7/: main.cpp
Lab_7/WIN/: Lab_7.vcxproj  Lab_7.vcxproj.filters  filesystem.hpp  handle_user_input.hpp  main.cpp
Labs_SPO/: Labs_SPO.vcxproj  main.cpp
